--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+    "name": "mern-blog",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "index.js",
     "scripts": {
-        "Git Add": "git add .",
-        "Git Push": "git push -u origin main"
+        "dev": "nodemon api/index.js",
+        "start": "node api/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.19.2",
+        "nodemon": "^3.1.3"
     }
 }
