--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
     "name": "mern-blog",
     "version": "1.0.0",
     "description": "",
-    "type": "module",
+    "type": "commonjs",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon api/index.js",
-        "start": "node api/index.js"
+        "dev": "nodemon --exec ts-node api/index.ts",
+        "start": "node dist/index.js",
+        "build": "tsc -p ."
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.19.2",
-        "nodemon": "^3.1.3"
+        "express": "^4.19.2"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.14.2",
+        "nodemon": "^3.1.3",
+        "ts-node": "^10.9.2",
+        "tsx": "^4.15.4",
+        "typescript": "^5.4.5"
     }
 }
