--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.19.2"
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongoose": "^8.4.1"
     },
     "devDependencies": {
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
         "@types/node": "^20.14.2",
         "nodemon": "^3.1.3",
