--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
     "version": "1.0.0",
     "description": "",
     "type": "commonjs",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
         "dev": "nodemon --exec ts-node api/index.ts",
         "start": "node dist/index.js",
-        "build": "tsc -p ."
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "mongoose": "^8.4.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
         "@types/node": "^20.14.2",
