--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "main": "index.ts",
     "scripts": {
         "dev": "nodemon --exec ts-node api/index.ts",
-        "start": "node dist/index.js",
-        "build": "tsc"
+        "start": "node dist/api/index.js",
+        "build": "tsc -p ."
     },
     "keywords": [],
     "author": "",
