--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-    // TODO TypeScript가 컴파일 되지 않는 오류 수정
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig to read more about this file */
 
@@ -27,7 +26,7 @@
 
         /* Modules */
         "module": "commonjs" /* Specify what module code is generated. */,
-        "rootDir": "./api" /* Specify the root folder within your source files. */,
+        "rootDir": "." /* Specify the root folder within your source files. */,
         "moduleResolution": "node10" /* Specify how TypeScript looks up a file from a given module specifier. */,
         // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
         // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -58,7 +57,7 @@
         // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
         "outDir": "./dist" /* Specify an output folder for all emitted files. */,
         // "removeComments": true,                           /* Disable emitting comments. */
-        "noEmit": true /* Disable emitting files from a compilation. */,
+        // "noEmit": true                                    /* Disable emitting files from a compilation. */,
         // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
         // "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types. */
         // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
@@ -96,7 +95,7 @@
         // "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read. */
         // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
         // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
-        "noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
+        // "noFallthroughCasesInSwitch": true                /* Enable error reporting for fallthrough cases in switch statements. */,
         // "noUncheckedIndexedAccess": true,                 /* Add 'undefined' to a type when accessed using an index. */
         // "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
         // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
