--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "dependencies": {
         "@types/cookie-parser": "^1.4.7",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/morgan": "^1.9.9",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.4.1"
+        "mongoose": "^8.4.1",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
