--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/redux-persist": "^4.3.1",
     "firebase": "^10.12.2",
     "flowbite-react": "^0.7.0",
+    "highlight.js": "^11.9.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
