--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/redux-persist": "^4.3.1",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "flowbite-react": "^0.7.0",
     "highlight.js": "^11.9.0",
