--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "dev": "nodemon --exec ts-node api/index.ts",
         "start": "node dist/api/index.js",
-        "build": "tsc -p ."
+        "build": "npm install && npm install --prefix client && npm run build -- prefix client",
+        "build-api": "tsc -p ."
     },
     "keywords": [],
     "author": "",
