--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.12.2",
     "flowbite-react": "^0.7.0",
     "highlight.js": "^11.9.0",
+    "mern-blog": "file:..",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
