--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "index.ts",
     "scripts": {
         "dev": "nodemon --exec ts-node api/index.ts",
-        "start": "node dist/api/index.js",
+        "start": "node api/index.js",
         "build": "npm install && npm install --prefix client && npm run build --prefix client",
         "build-api": "tsc -p ."
     },
