--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "main": "index.ts",
     "scripts": {
         "dev": "nodemon --exec ts-node api/index.ts",
-        "start": "node api/index.js",
-        "build": "tsc && npm install && npm install --prefix client && npm run build --prefix client",
+        "start": "node dist/api/index.js",
+        "build": "npm run build-api && npm install --prefix client && npm run build --prefix client",
         "build-api": "tsc -p ."
     },
     "keywords": [],
