--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "scripts": {
         "dev": "nodemon --exec ts-node api/index.ts",
         "start": "node dist/api/index.js",
-        "build": "npm install && npm run build-api",
-        "build-api": "npm install && tsc -p .",
-        "build-client": "npm install --prefix client && npm run build --prefix client"
+        "build": "npm run build-api && npm run build-client",
+        "build-api": "tsc -p .",
+        "build-client": "npm run build --prefix client",
+        "vercel-install": "npm install && npm install --prefix client"
     },
     "keywords": [],
     "author": "",
